--- a/app/src/main/res/layout/activity_scan_product_camera.xml
+++ b/app/src/main/res/layout/activity_scan_product_camera.xml
@@ -83,6 +83,8 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:src="@drawable/scanbarcode"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
