--- a/app/src/main/res/layout/activity_scanproduct.xml
+++ b/app/src/main/res/layout/activity_scanproduct.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6E0E9"
@@ -13,6 +14,7 @@
         android:id="@+id/btnBack"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:padding="10dp"
         android:src="@drawable/backbutton"
         app:layout_constraintStart_toStartOf="parent"
