--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="SEARCH HISTORY"
+        android:textColor="#0B0B0B"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
